well-being-score done

--- a/index.html
+++ b/index.html
@@ -3,12 +3,98 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Comfortaa:wght@300..700&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+    <link rel="stylesheet" href="../css/style.css" />
   </head>
-
   <body>
-    <h1>Document</h1>
-
-    <button><a href="app/login.php"> login </a></button>
+    <h1 style="display: flex; justify-content: center; margin-top: 70px">
+      Agga's Application
+    </h1>
+    <div
+      style="
+        max-width: 80%;
+        margin: auto;
+        display: flex;
+        justify-content: space-around;
+        margin-top: 90px;
+        height: 100%;
+      "
+    >
+      <!-- menubar -->
+      <div
+        style="
+          max-width: 230px;
+          display: flex;
+          justify-content: center;
+          border: 2px solid black;
+          margin: 150px;
+          border-radius: 5px;
+          height: 100%;
+        "
+      >
+        <ul style="list-style-type: none">
+          <li
+            style="
+              padding: 15px;
+              display: flex;
+              justify-content: center;
+              border-bottom: 2px solid;
+              border-radius: 10px;
+            "
+          >
+            <a href="" style="padding: 15px">Dashboard</a>
+          </li>
+          <li
+            style="
+              padding: 15px;
+              display: flex;
+              justify-content: center;
+              border-bottom: 2px solid;
+              border-radius: 10px;
+            "
+          >
+            <a href="" style="padding: 15px">Inspirational Quote</a>
+          </li>
+          <li style="padding: 15px; display: flex; justify-content: center">
+            <a href="/wellbeing-score.html" style="padding: 15px"
+              >Wellbeing Score</a
+            >
+          </li>
+        </ul>
+      </div>
+      <div style="height: 100%">
+        <div
+          style="
+            border: 2px solid;
+            height: 100%;
+            margin: auto;
+            border-radius: 9px;
+          "
+        >
+          <div
+            style="
+              padding: 20px;
+              box-shadow: 10px 10px black;
+              border-radius: 9px;
+            "
+          >
+            <h1>Welcome Agga Myo</h1>
+            <p style="margin-top: 30px; font-size: larger">
+              Please select the menu for the features of the application
+            </p>
+            <p style="font-size: medium; margin-top: 20px">Have fun !</p>
+          </div>
+        </div>
+        <div style="margin-top: 30px; display: flex; justify-content: center">
+          <img src="../img/mood.jpg" alt="" style="height: 300px" />
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
   </body>
 </html>
