--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/style.css" />
   </head>
   <body>
-    <h1 style="display: flex; justify-content: center; margin-top: 70px">
+    <h1 style="display: flex; justify-content: center; margin-top: 50px">
       Agga's Application
     </h1>
     <div
@@ -21,23 +21,22 @@
         margin: auto;
         display: flex;
         justify-content: space-around;
-        margin-top: 90px;
+        margin-top: 80px;
         height: 100%;
       "
     >
       <!-- menubar -->
       <div
         style="
-          max-width: 230px;
+          width: 250px;
           display: flex;
           justify-content: center;
           border: 2px solid black;
-          margin: 150px;
           border-radius: 5px;
           height: 100%;
         "
       >
-        <ul style="list-style-type: none">
+        <ul style="list-style-type: none; width: 100%">
           <li
             style="
               padding: 15px;
@@ -47,7 +46,7 @@
               border-radius: 10px;
             "
           >
-            <a href="" style="padding: 15px">Dashboard</a>
+            <a href="/dashboard.html" style="padding: 15px">Dashboard</a>
           </li>
           <li
             style="
@@ -58,7 +57,9 @@
               border-radius: 10px;
             "
           >
-            <a href="" style="padding: 15px">Inspirational Quote</a>
+            <a href="/inspiration-quote.html" style="padding: 15px"
+              >Inspirational Quote</a
+            >
           </li>
           <li style="padding: 15px; display: flex; justify-content: center">
             <a href="/wellbeing-score.html" style="padding: 15px"
@@ -91,7 +92,7 @@
           </div>
         </div>
         <div style="margin-top: 30px; display: flex; justify-content: center">
-          <img src="../img/mood.jpg" alt="" style="height: 300px" />
+          <img src="../img/mood.jpg" alt="" style="height: 250px" />
         </div>
       </div>
     </div>
