--- a/wellbeing-score.html
+++ b/wellbeing-score.html
@@ -13,7 +13,12 @@
     <title>Document</title>
   </head>
   <body>
-    <h1 style="display: flex; justify-content: center; margin-top: 70px">
+    <div style="position: absolute; right: 90%; cursor: pointer">
+      <a href="./index.html"
+        ><img src="../img/back-page.png" alt="" style="width: 60px"
+      /></a>
+    </div>
+    <h1 style="display: flex; justify-content: center; margin-top: 60px">
       Categories to add wellbeing score
     </h1>
     <div
@@ -150,7 +155,7 @@
         </div>
       </div>
     </div>
-   <div style="margin-top: 120px">
+   <div style="margin-top: 90px">
     <h2 style="text-align: center;">---------- Made with love by Agga ----------</h3>
    </div>
    <script src="../js/wellbeing-score.js"></script>
