--- a/dashboard.html
+++ b/dashboard.html
@@ -16,12 +16,19 @@
           margin-top: 50px;
         "
       >
-        <div style="position: absolute; right: 90%; cursor: pointer">
+        <div
+          style="position: absolute; right: 80%; cursor: pointer; bottom: 87%"
+        >
           <a href="./index.html"
             ><img src="../img/back-page.png" alt="" style="width: 60px"
           /></a>
         </div>
-        <h1 style="">Score Dashboard</h1>
+        <h1
+          style="display: flex; justify-content: center; text-align: center"
+          class="mobile-margin"
+        >
+          Score Dashboard
+        </h1>
       </div>
       <div style="max-width: 70%; margin: auto">
         <div id="dashboard" style="width: 100%; height: 500px"></div>
