--- a/inspiration-quote.html
+++ b/inspiration-quote.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="../css/inspiration-quote.css" />
+    <link rel="stylesheet" href="../css/quote.css" />
   </head>
   <body>
     <div>
@@ -13,26 +13,6 @@
           ><img src="../img/back-page.png" alt="" style="width: 60px"
         /></a>
       </div>
-      <h1 style="display: flex; justify-content: center; margin-top: 50px">
-        Inspirational quote for the day
-      </h1>
-      <div style="display: flex; justify-content: space-between;align-items: center;max-width: 70%;margin: auto; margin-top: 80px;">
-        <div id="previous-button">
-            <img src="../img/left.png" alt="" style="width: 80px;cursor: pointer;">
-        </div>
-        <div class="quote-container">
-            <div style="margin: 20px;font-size: 50px;">"</div>
-            <p style="margin: 20px; text-align: center;font-size:23px;" id="quote-content"></p>
-            <div style="margin: 20px; text-align: end;font-size: 50px;">"</div>
-            <h3 style="margin: 40px;text-align: end;font-weight: 800;" id="quote-author"></h3>
-        </div>
-        <div id="next-button">
-            <img src="../img/next.png" alt="" style="width: 80px;cursor: pointer;">
-        </div>
-      </div>
-      <div style="margin-top: 70px">
-        <h2 style="text-align: center;">---------- Made with love by Agga ----------</h3>
-       </div>
     </div>
     <script src="../js/quote.js"></script>
   </body>
