--- a/wellbeing-score.html
+++ b/wellbeing-score.html
@@ -13,18 +13,25 @@
     <title>Document</title>
   </head>
   <body>
-    <div style="position: absolute; right: 90%; cursor: pointer">
+    <div style="position: absolute; right: 80%; cursor: pointer; bottom: 87%">
       <a href="./index.html"
         ><img src="../img/back-page.png" alt="" style="width: 60px"
       /></a>
     </div>
-    <h1 style="display: flex; justify-content: center; margin-top: 60px">
+    <h1
+      style="
+        display: flex;
+        justify-content: center;
+        margin-top: 60px;
+        text-align: center;
+      "
+    >
       Categories to add wellbeing score
     </h1>
     <div
       style="
         display: flex;
-        max-width: 80%;
+        min-width: 80%;
         margin: auto;
         justify-content: space-around;
         margin-top: 100px;
@@ -79,6 +86,7 @@
           justify-content: center;
           align-items: center;
         "
+        class="mobile-margin"
       >
         <h2>Workload management</h2>
         <div
@@ -123,6 +131,7 @@
       >
         <h2>Anxiety level</h2>
         <div
+          class="mobile-margin"
           id="anxiety"
           style="
             border: 1px solid black;
@@ -155,9 +164,7 @@
         </div>
       </div>
     </div>
-   <div style="margin-top: 90px">
-    <h2 style="text-align: center;">---------- Made with love by Agga ----------</h3>
-   </div>
-   <script src="../js/wellbeing-score.js"></script>
+
+    <script src="../js/wellbeing-score.js"></script>
   </body>
 </html>
